# child-play

./: CMakeLists.txt  README.md
file-io/: CMakeLists.txt  README.md
file-io/config/: binary_dir.hpp.in
file-io/src/: main.cpp
